# mopidy-local

./: .copier-answers.yml  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
mopidy_local/: __init__.py  actor.py  commands.py  ext.conf  images.py  json.py  library.py  mtimes.py  playback.py  schema.py  sqlite.py  storage.py  translator.py  web.py
mopidy_local/sql/: schema.sql  upgrade-v1.sql  upgrade-v6.sql
mopidy_local/www/: index.html
src/mopidy_local/: __init__.py  actor.py  commands.py  library.py  mtimes.py  playback.py  schema.py  storage.py  translator.py  web.py
src/mopidy_local/sql/: schema.sql  upgrade-v2.sql  upgrade-v3.sql  upgrade-v4.sql  upgrade-v5.sql  upgrade-v6.sql
src/mopidy_local/www/: index.html
tests/: __init__.py  dummy_audio.py  test_extension.py  test_json.py  test_library.py  test_mtimes.py  test_playback.py  test_schema.py  test_search.py  test_sqlite.py  test_storage.py  test_tracklist.py  test_translator.py
